Bug 485830 - Virtual Monitor plugin sends wrong url, plugin not usable
Summary: Virtual Monitor plugin sends wrong url, plugin not usable
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Fabian Arndt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-20 02:42 UTC by Fabian Arndt
Modified: 2024-04-28 14:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Arndt 2024-04-20 02:42:01 UTC
SUMMARY

The plugin builds an url that links to the target, not the server.
Therefore the connections fails and the plugin is not usable.

STEPS TO REPRODUCE

1. Pair two computers
2. Open the Plasmoid
3. Click "Virtual Display"

OBSERVED RESULT

If everything works out, a KRDC window is opened on the target (which should act as the display).
The url is it's local IP, not the IP of the host.

EXPECTED RESULT

The url should be the host's url. A connection should be established.

SOFTWARE/OS VERSIONS

Linux: Nobara Linux 39
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Comment 1 Bug Janitor Service 2024-04-25 22:08:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/669
Comment 2 Aleix Pol 2024-04-28 14:14:29 UTC
Git commit 2716a7a2e6583ead4cc4e9a9a9efb831dd7b28e7 by Aleix Pol Gonzalez, on behalf of Fabian Arndt.
Committed on 28/04/2024 at 14:14.
Pushed by apol into branch 'master'.

Fixed virtualmonitorplugin url generation

The current implementation of the plugin is severly broken.

1. The generated URL links to the localhost
2. The port is not set

-----

The URL is now generated on the request receiving side, not send in the request.
This allows finding a valid IP address.

Furthermore, I changed the protocol by splitting it up. This could become useful, if we ever want to support other rdp protocols/platforms.

Note: This is a breaking change, but the current implementation is not working at all.. so it does not actually break something.

M  +30   -10   plugins/virtualmonitor/virtualmonitorplugin.cpp

https://invent.kde.org/network/kdeconnect-kde/-/commit/2716a7a2e6583ead4cc4e9a9a9efb831dd7b28e7